Correct header from going off screen on smaller devices

--- a/public/css/projects.css
+++ b/public/css/projects.css
@@ -13,6 +13,13 @@ body {
           flex-direction: column;
 }
 
+.projects h1 {
+  font-size: 8vw;
+}
+.projects h2 {
+  font-size: 7vw;
+}
+
 .project-wrapper {
   max-width: 1280px;
   margin: 0 auto;
@@ -37,6 +44,10 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+        flex-direction: column;
 }
 
 .tech-select li {
@@ -77,4 +88,19 @@ body {
 
 .tech-links li {
   padding-right: 1rem;
+}
+
+@media screen and (min-width: 600px) {
+  .projects h1 {
+    font-size: 4rem;
+  }
+  .projects h2 {
+    font-size: 2rem;
+  }
+  .tech-select {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
 }
